Almost done with puzzle 2
Made puzzle 1 styling better (padding).

Done with puzzle 2:

nav-menu
carousel
footer

Made a beginning with puzzle 2:

cards for the images, and the text in it.

--- a/B3W6O1/B3W6O1/puzzle1.html
+++ b/B3W6O1/B3W6O1/puzzle1.html
@@ -67,40 +67,40 @@
 
             <div>
                 <div class='d-flex'>
-                    <div class='col-3 border border-grey'>
+                    <div class='col-3 border border-grey p-3'>
                         <img class='img-fluid' src="img/item1.jpg">
                         <h2>Etiam hendrerit vel sem ac accumsan</h2>
                         <p id="item1text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
                         <p><a href="#item1text">Lees meer &hellip;</a></p>
                     </div>
-                    <div class='col-5 border border-grey mx-5'>
+                    <div class='col-5 border border-grey p-3 mx-5'>
                         <img class='img-fluid' src="img/item2.jpg">
                         <h2>Etiam hendrerit vel sem ac accumsan</h2>
                         <p id="item2text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
                         <p><a href="#item2text">Lees meer &hellip;</a></p>
                     </div>
-                    <div class='col-3 border border-grey'>
+                    <div class='col-3 border border-grey p-3'>
                         <img class='img-fluid' src="img/item3.jpg">
                         <h2>Etiam hendrerit vel sem ac accumsan</h2>
                         <p id="item3text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
                         <p><a href="#item3text">Lees meer &hellip;</a></p>
                     </div>
                 </div>
-
+                
                 <div class='mt-4 d-flex'>
-                    <div class='col-4 border border-grey'>
+                    <div class='col-4 border border-grey  p-3'>
                         <img class='img-fluid' src="img/item4.jpg">
                         <h2>Etiam hendrerit vel sem ac accumsan</h2>
                         <p id="item4text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
                         <p><a href="#item4text">Lees meer &hellip;</a></p>
                     </div>
-                    <div class='col-3 border border-grey mx-5'>
+                    <div class='col-3 border border-grey p-3 mx-5'>
                         <img class='img-fluid' src="img/item5.jpg">
                         <h2>Etiam hendrerit vel sem ac accumsan</h2>
                         <p id="item5text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
                         <p><a href="#item5text">Lees meer &hellip;</a></p>
                     </div>
-                    <div class='col-4 border border-grey'>
+                    <div class='col-4 border border-grey p-3'>
                         <img class='img-fluid' src="img/item6.jpg">
                         <h2>Etiam hendrerit vel sem ac accumsan</h2>
                         <p id="item6text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
