Puzzel 2 een beetje aangepast.

--- a/B3W6O1/B3W6O1/puzzle2.html
+++ b/B3W6O1/B3W6O1/puzzle2.html
@@ -55,23 +55,24 @@
             </div>
 
 
-            <div class='container m-0 row bg-secondary'>
+            <div class='container-fluid m-0 row bg-secondary pt-2'>
                 <div class='col-6'>
-                    <div class='card bg-white mb-4 mt-1 dropup'>
-                        <img class="w-25 h-25 card-img-top ml-2" src="img/item1.jpg">
-                        <h2 class="w-75 bg-info text-white text-right pr-4 mr-2">Etiam hendrerit vel sem ac accumsan</h2>
-                        <p class="card-text dropdown-menu px-4" id="item1text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
+                    <div class='row card bg-white dropup'>
+                        <img class="col-3 card-img-top" src="img/item1.jpg">
+                        <h2 class="col-9 bg-info text-white text-right pr-4 mr-2">Etiam hendrerit vel sem ac accumsan</h2>
+                        <p class="card-text dropdown-menu px-5" id="item1text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
                         <p class="mb-2 mr-2" data-toggle="dropdown"><a class='btn btn-info float-right text-white' href="#item1text">Lees meer &hellip;</a></p>
                     </div>
 
-                    <div class='card bg-white mb-4 mt-1 dropup'>
+
+                    <div class='card bg-white dropup my-3'>
                         <img class="w-25 h-25 card-img-top ml-2" src="img/item2.jpg">
                         <h2 class="w-75 bg-info text-white text-right pr-4 mr-2">Etiam hendrerit vel sem ac accumsan</h2>
                         <p class="card-text dropdown-menu px-4" id="item2text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
                         <p class="mb-2 mr-2" data-toggle="dropdown"><a class='btn btn-info float-right text-white' href="#item2text">Lees meer &hellip;</a></p>
                     </div>
 
-                    <div class='card bg-white mb-4 mt-1 dropup'>
+                    <div class='card bg-white dropup'>
                         <img class="w-25 h-25 card-img-top ml-2" src="img/item3.jpg">
                         <h2 class="w-75 bg-info text-white text-right pr-4 mr-2">Etiam hendrerit vel sem ac accumsan</h2>
                         <p class="card-text dropdown-menu px-4" id="item3text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
@@ -81,21 +82,21 @@
 
 
                 <div class='col-6'>
-                    <div class='card bg-white mb-4 mt-1 dropup'>
+                    <div class='card bg-white dropup'>
                         <img class="w-25 h-25 card-img-top ml-2" src="img/item4.jpg">
                         <h2 class="w-75 bg-info text-white text-right pr-4 mr-2">Etiam hendrerit vel sem ac accumsan</h2>
                         <p class="card-text dropdown-menu px-4" id="item4text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
                         <p class="mb-2 mr-2" data-toggle="dropdown"><a class='btn btn-info float-right text-white' href="#item4text">Lees meer &hellip;</a></p>
                     </div>
 
-                    <div class='card bg-white mb-4 mt-1 dropup'>
+                    <div class='card bg-white dropup my-3'>
                         <img class="w-25 h-25 card-img-top ml-2" src="img/item5.jpg">
                         <h2 class="w-75 bg-info text-white text-right pr-4 mr-2">Etiam hendrerit vel sem ac accumsan</h2>
                         <p class="card-text dropdown-menu px-4" id="item5text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
                         <p class="mb-2 mr-2" data-toggle="dropdown"><a class='btn btn-info float-right text-white' href="#item5text">Lees meer &hellip;</a></p>
                     </div>
 
-                    <div class='card bg-white mb-4 mt-1 dropup'>
+                    <div class='card bg-white dropup mb-2'>
                         <img class="w-25 h-25 card-img-top ml-2" src="img/item6.jpg">
                         <h2 class="w-75 bg-info text-white text-right pr-4 mr-2">Etiam hendrerit vel sem ac accumsan</h2>
                         <p class="card-text dropdown-menu px-4" id="item6text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
