--- a/B3W6O1/B3W6O1/puzzle2.html
+++ b/B3W6O1/B3W6O1/puzzle2.html
@@ -55,52 +55,52 @@
             </div>
 
 
-            <div class='container-fluid m-0 row bg-secondary pt-2'>
-                <div class='col-6'>
-                    <div class='row card bg-white dropup'>
-                        <img class="col-3 card-img-top" src="img/item1.jpg">
-                        <h2 class="col-9 bg-info text-white text-right pr-4 mr-2">Etiam hendrerit vel sem ac accumsan</h2>
-                        <p class="card-text dropdown-menu px-5" id="item1text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
-                        <p class="mb-2 mr-2" data-toggle="dropdown"><a class='btn btn-info float-right text-white' href="#item1text">Lees meer &hellip;</a></p>
+            <div class='container-fluid m-0 row bg-secondary py-2'>
+                <div class='col-6 row mr-4'>
+                    <div class='card bg-white'>
+                        <img style="height: 80px; width: 25%;" class="card-img-top ml-2 float-left" src="img/item1.jpg">
+                        <h2 style="height: 80px; width: 75%;" class="bg-info text-white pr-3 text-right m-0">Etiam hendrerit vel sem ac accumsan</h2>
+                        <p class="collapse multi-collapse" id="tree1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
+                        <p class="mb-2 mr-2"><a class="btn btn-primary float-right bg-info" data-toggle="collapse" href="#tree1" role="button" aria-expanded="false" aria-controls="tree1">Lees meer &hellip;</a></p>
                     </div>
 
 
-                    <div class='card bg-white dropup my-3'>
-                        <img class="w-25 h-25 card-img-top ml-2" src="img/item2.jpg">
-                        <h2 class="w-75 bg-info text-white text-right pr-4 mr-2">Etiam hendrerit vel sem ac accumsan</h2>
-                        <p class="card-text dropdown-menu px-4" id="item2text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
-                        <p class="mb-2 mr-2" data-toggle="dropdown"><a class='btn btn-info float-right text-white' href="#item2text">Lees meer &hellip;</a></p>
+                    <div class='card bg-white my-3'>
+                        <img style="height: 80px; width: 25%;" class="card-img-top ml-2 float-left" src="img/item2.jpg">
+                        <h2 style="height: 80px; width: 75%;" class="bg-info text-white pr-3 text-right m-0">Etiam hendrerit vel sem ac accumsan</h2>
+                        <p class="collapse multi-collapse" id="tree2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
+                        <p class="mb-2 mr-2"><a class="btn btn-primary float-right bg-info" data-toggle="collapse" href="#tree2" role="button" aria-expanded="false" aria-controls="tree2">Lees meer &hellip;</a></p>
                     </div>
 
-                    <div class='card bg-white dropup'>
-                        <img class="w-25 h-25 card-img-top ml-2" src="img/item3.jpg">
-                        <h2 class="w-75 bg-info text-white text-right pr-4 mr-2">Etiam hendrerit vel sem ac accumsan</h2>
-                        <p class="card-text dropdown-menu px-4" id="item3text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
-                        <p class="mb-2 mr-2" data-toggle="dropdown"><a class='btn btn-info float-right text-white' href="#item3text">Lees meer &hellip;</a></p>
+                    <div class='card bg-white'>
+                        <img style="height: 80px; width: 25%;" class="card-img-top ml-2 float-left" src="img/item3.jpg">
+                        <h2 style="height: 80px; width: 75%;" class="bg-info text-white pr-3 text-right m-0">Etiam hendrerit vel sem ac accumsan</h2>
+                        <p class="collapse multi-collapse" id="tree3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
+                        <p class="mb-2 mr-2"><a class="btn btn-primary float-right bg-info" data-toggle="collapse" href="#tree3" role="button" aria-expanded="false" aria-controls="tree3">Lees meer &hellip;</a></p>
                     </div>
                 </div>
 
 
-                <div class='col-6'>
-                    <div class='card bg-white dropup'>
-                        <img class="w-25 h-25 card-img-top ml-2" src="img/item4.jpg">
-                        <h2 class="w-75 bg-info text-white text-right pr-4 mr-2">Etiam hendrerit vel sem ac accumsan</h2>
-                        <p class="card-text dropdown-menu px-4" id="item4text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
-                        <p class="mb-2 mr-2" data-toggle="dropdown"><a class='btn btn-info float-right text-white' href="#item4text">Lees meer &hellip;</a></p>
+                <div class='col-6 row'>
+                    <div class='card bg-white'>
+                        <img style="height: 80px; width: 25%;" class="card-img-top ml-2 float-left" src="img/item4.jpg">
+                        <h2 style="height: 80px; width: 75%;" class="bg-info text-white pr-3 text-right m-0">Etiam hendrerit vel sem ac accumsan</h2>
+                        <p class="collapse multi-collapse" id="tree4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
+                        <p class="mb-2 mr-2"><a class="btn btn-primary float-right bg-info" data-toggle="collapse" href="#tree4" role="button" aria-expanded="false" aria-controls="tree4">Lees meer &hellip;</a></p>
                     </div>
 
-                    <div class='card bg-white dropup my-3'>
-                        <img class="w-25 h-25 card-img-top ml-2" src="img/item5.jpg">
-                        <h2 class="w-75 bg-info text-white text-right pr-4 mr-2">Etiam hendrerit vel sem ac accumsan</h2>
-                        <p class="card-text dropdown-menu px-4" id="item5text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
-                        <p class="mb-2 mr-2" data-toggle="dropdown"><a class='btn btn-info float-right text-white' href="#item5text">Lees meer &hellip;</a></p>
+                    <div class='card bg-white my-3'>
+                        <img style="height: 80px; width: 25%;" class="card-img-top ml-2 float-left" src="img/item5.jpg">
+                        <h2 style="height: 80px; width: 75%;" class="bg-info text-white pr-3 text-right m-0">Etiam hendrerit vel sem ac accumsan</h2>
+                        <p class="collapse multi-collapse" id="tree5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
+                        <p class="mb-2 mr-2"><a class="btn btn-primary float-right bg-info" data-toggle="collapse" href="#tree5" role="button" aria-expanded="false" aria-controls="tree5">Lees meer &hellip;</a></p>
                     </div>
 
-                    <div class='card bg-white dropup mb-2'>
-                        <img class="w-25 h-25 card-img-top ml-2" src="img/item6.jpg">
-                        <h2 class="w-75 bg-info text-white text-right pr-4 mr-2">Etiam hendrerit vel sem ac accumsan</h2>
-                        <p class="card-text dropdown-menu px-4" id="item6text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
-                        <p class="mb-2 mr-2" data-toggle="dropdown"><a class='btn btn-info float-right text-white' href="#item6text">Lees meer &hellip;</a></p>
+                    <div class='card bg-white'>
+                        <img style="height: 80px; width: 25%;" class="card-img-top ml-2 float-left" src="img/item6.jpg">
+                        <h2 style="height: 80px; width: 75%;" class="bg-info text-white pr-3 text-right m-0">Etiam hendrerit vel sem ac accumsan</h2>
+                        <p class="collapse multi-collapse" id="tree6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
+                        <p class="mb-2 mr-2"><a class="btn btn-primary float-right bg-info" data-toggle="collapse" href="#tree6" role="button" aria-expanded="false" aria-controls="tree6">Lees meer &hellip;</a></p>
                     </div>
                 </div>
             </div>
